# taskbench-sft-comparison

./: .env.example  .gitignore  CLAUDE.md  EXPERIMENT.md  README.md  RUNBOOK.md  pyproject.toml  requirements.txt  run.sh
.claude/: settings.local.json
configs/: default.yaml  experiment.yaml  experiment_4090.yaml  experiment_dag_fulljson.yaml  experiment_gnn4plan.yaml  experiment_gnn4plan_dag.yaml  experiment_gnn4plan_extra.yaml  experiment_models.yaml  experiment_ultratool.yaml  smoke.yaml  smoke_gpu.yaml
outputs_smoke/: comparison.md
outputs_smoke/Base-Full-JSON/: predictions_test_all.jsonl  run_manifest.json
outputs_smoke/Base-Trajectory/: predictions_test_all.jsonl  run_manifest.json
outputs_smoke/SFT-Full-JSON/: metrics.json  predictions_test_all.jsonl  run_manifest.json  train_summary.json
outputs_smoke/SFT-Trajectory/: metrics.json  run_manifest.json  (+3 more)
scripts/: download_data.sh  download_gnn4plan.sh  job_env.sh  job_unites.sbatch  make_tiny_model.py  prep_env.sh  prep_env_china.sh  prepare_unites.sh  prestage_all.sh  prestage_env.sh  run_experiment_matrix.sh  run_grid.sh  run_smoke_4090.sh  setup_US.sh  setup_autodl.sh  setup_china.sh  smoke_rule_smoothing.sh  smoke_test.sh  submit_unites.sh  sweep_models.sh  sweep_sft.sh
taskbench_sft/: __init__.py  cli.py  config.py  experiment.py  logging_utils.py  manifest.py  schema.py  smoke_gpu.py  targets.py  tokenization.py  wandb_utils.py
templates/: README.md  setup_env.sh
tests/: conftest.py  test_metrics.py  test_parse.py  test_rule_smoothing.py  test_targets.py  test_tokenization.py  test_topology.py
(+48 files in other folders)
