[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "taskbench-sft"
version = "0.1.0"
description = "TaskBench SFT target-format comparison (Full JSON vs Tool Trajectory)"
requires-python = ">=3.9"
dependencies = [
    "numpy",
    "scipy",
    "scikit-learn",
    "Levenshtein",
    "pyyaml",
    "pydantic>=2",
    "networkx",
    "rouge-score",
]

[project.optional-dependencies]
train = [
    "torch>=2.1",
    "transformers>=4.40",
    "peft>=0.10",
    "trl",
    "datasets",
    "accelerate",
    "bitsandbytes; platform_system == 'Linux'",
    "wandb",
]
dev = ["pytest"]

[project.scripts]
taskbench-sft = "taskbench_sft.cli:main"

[tool.setuptools]
packages = ["taskbench_sft", "taskbench_sft.data", "taskbench_sft.prompts",
            "taskbench_sft.reports", "taskbench_sft.train", "taskbench_sft.infer",
            "taskbench_sft.eval", "taskbench_sft.official"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
filterwarnings = ["ignore::UserWarning"]
